@@ -1,4 +1,9 @@
 Next:
+  - DOS kernel: Remove fixed hacks for SFT and dynamically allocate the
+    second SFT table for the last N - 5 file handles. Add code to zero
+    SFT table memory to ensure that random data doesn't cause issues.
+    Windows 3.1 is still perfectly fine with it, so the SFT table update
+    and cleanup is complete. (joncampbell123).
   - DOS kernel: Move the magic "CON" strings into the first SFT and
     mimic the 5 default open file handles that every DOS process starts
     with: CON CON CON AUX PRN. Windows 3.1 is still happy with it, which
